<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.datos_personales">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datos"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/Nombre"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/Apellido"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/Telefono"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_phone"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/Correo"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_mail"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/Ciudad"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_location_city"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/direccion"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_location"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_btn"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/btnSiguiente"
        />

</LinearLayout>