<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context=".Views.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/account_circle"
        android:contentDescription="@string/errorimg"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbNuevo"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:gravity="end"
        >
        <EditText
            android:id="@+id/txtNuevoUsuario"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="@string/usuario"
            android:autofillHints="username"
            android:background="@color/white"
            android:inputType="textPersonName"
            android:importantForAutofill="no"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_person"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="end"
        >
        <EditText
            android:id="@+id/txtNuevaContrasena"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:hint="@string/contrasena"
            android:background="@color/white"
            android:inputType="textPassword"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_lock"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:gravity="end"
        >
        <EditText
            android:id="@+id/txtVerificarContrasena"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:hint="@string/VerificarContrasena"
            android:background="@color/white"
            android:inputType="textPassword"
            android:gravity="center"
            android:textColorHint="@color/press"
            android:textColor="@color/noprees"
            android:textSize="20sp"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_security"
            android:padding="5dp"
            app:tint="@color/noprees"
            android:contentDescription="@string/errorimg"
            />
    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_btn"
        android:text="@string/btnRegiter"
        android:textStyle="bold"
        android:textAllCaps="true"
        />
    <ProgressBar
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/white"
        />
</LinearLayout>